syntax="proto3";

package file;

option go_package ="/grpc_file";

service FileService{
  rpc GetAllFiles(GetFileByUser) returns (FileList);
}

message GetFileByUser{
}

message File{
  string filename=1;
  string image_url = 2;
}

message FileList {
  repeated File allfiles = 1;
}
